--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/jimkang/mic-to-buffer",
   "devDependencies": {
+    "eslint": "^6.8.0"
   },
   "dependencies": {
     "audio-context-singleton": "^1.0.2",
